--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js"
   },
   "keywords": [],
   "engines": {
@@ -21,7 +22,13 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "knex": "^0.20.3",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "pg": "^7.14.0",
+    "postgrator": "^3.11.0"
+  },
+  "devDependencies": {
+    "postgrator-cli": "^3.2.0"
   }
 }
