--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js",
-    "migrate": "postgrator --config postgrator-config.js"
+    "migrate": "postgrator --config postgrator-config.js",
+    "seed": "psql -U postgres -d trivia_tracker_test -f ./seeds/seed.trivia_tables.sql"
   },
   "keywords": [],
   "engines": {
