--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
-    "seed": "psql -U postgres -d trivia_tracker_test -f ./seeds/seed.trivia_tables.sql"
+    "seed": "psql -U postgres -d trivia_tracker_test -f ./seeds/seed.trivia_tables.sql",
+    "truncate": "psql -U postgres -d trivia_tracker_test -f ./seeds/trunc.trivia_tables.sql"
   },
   "keywords": [],
   "engines": {
