--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "seed": "psql -U postgres -d trivia_tracker_test -f ./seeds/seed.trivia_tables.sql",
-    "truncate": "psql -U postgres -d trivia_tracker_test -f ./seeds/trunc.trivia_tables.sql"
+    "truncate": "psql -U postgres -d trivia_tracker_test -f ./seeds/trunc.trivia_tables.sql",
+    "dropTables": "psql -U postgres -d trivia_tracker_test -f ./seeds/drop.tables.sql"
   },
   "keywords": [],
   "engines": {
