--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
     "deploy": "git push heroku master",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
@@ -15,7 +14,10 @@
     "dropTables": "psql -U postgres -d trivia_tracker_test -f ./seeds/drop.tables.sql",
     "truncateReal": "psql -U postgres -d trivia_tracker -f ./seeds/trunc.trivia_tables.sql",
     "dropRealTables": "psql -U postgres -d trivia_tracker -f ./seeds/drop.tables.sql",
-    "seedRealTables": "psql -U postgres -d trivia_tracker -f ./seeds/seed.trivia_tables.sql"
+    "seedRealTables": "psql -U postgres -d trivia_tracker -f ./seeds/seed.trivia_tables.sql",
+    "migrate:production": " DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+    "predeploy": "npm audit && npm run migrate:production",
+    "prepredeploy": "env SSL=true "
   },
   "keywords": [],
   "engines": {
